HTML first mock-up

--- a/home.html
+++ b/home.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>UDrive</title>
+    <meta name="UDrive" content="A better carsgaring solution!">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Text+Me+One&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div class="container">
+      <div class="background">
+        <img src="images/background-home.jpg" alt="background">
+      </div>
+      <div class="elements">
+        <div class="welcome-text">
+          <p>USE YOUR PHONE TO REGISTER</p>
+          <p>PRESS GO IF YOU ARE REGISTERED</p>
+        </div>
+        <div class="phone-box-flex">
+          <div class="phone-suffix">
+            <p>+41</p>
+          </div>
+          <div class="XX XXX XX XX">
+            <p>XX XXX XX XX</p>
+          </div>
+          <div class="go-btn">
+            <p>GO</p>
+          </div>
+          <div class="title">
+            <p>UDrive</p>
+          </div>
+        </div>
 
+      </div>
+    </div>
+  </body>
+</html>
