Added CSS and ovementsHTML impr

--- a/home.html
+++ b/home.html
@@ -4,33 +4,32 @@
     <meta charset="utf-8">
     <title>UDrive</title>
     <meta name="UDrive" content="A better carsgaring solution!">
+    <link rel="stylesheet" href="home-style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Text+Me+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Text+Me+One&family=Roboto:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
-      <div class="background">
-        <img src="images/background-home.jpg" alt="background">
-      </div>
-      <div class="elements">
-        <div class="welcome-text">
+      <div class="box">
+        <div class="welcome-text Roboto">
           <p>USE YOUR PHONE TO REGISTER</p>
           <p>PRESS GO IF YOU ARE REGISTERED</p>
         </div>
-        <div class="phone-box-flex">
-          <div class="phone-suffix">
+        <div class="phone-box-flex Roboto">
+          <div class="phone-suffix Roboto">
             <p>+41</p>
           </div>
-          <div class="XX XXX XX XX">
+          <div class="XX XXX XX XX Roboto">
             <p>XX XXX XX XX</p>
           </div>
-          <div class="go-btn">
+          <div class="go-btn Roboto">
             <p>GO</p>
           </div>
-          <div class="title">
-            <p>UDrive</p>
-          </div>
         </div>
+        <div class="title">
+            <p>UDrive</p>
+        </div>
+
 
       </div>
     </div>
