Finalization of page 1 Added link to sdecond page

--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta name="UDrive" content="A better carsgaring solution!">
     <link rel="stylesheet" href="home-style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Text+Me+One&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Text+Me+One&family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -23,7 +23,9 @@
             <p>XX XXX XX XX</p>
           </div>
           <div class="go-btn Roboto">
-            <p>GO</p>
+            <a href="car-choice.html" class="go-btn Roboto">
+              <p><strong>GO</strong></p>
+            </a>
           </div>
         </div>
         <div class="title">
