Added head to the second page

--- a/car-choice.html
+++ b/car-choice.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>UDrive</title>
+    <meta name="UDrive" content="A better carsgaring solution!">
+    <link rel="stylesheet" href="car-choice-style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Text+Me+One&family=Roboto&display=swap" rel="stylesheet">
+  </head>
