default margin and padding changed to 0

--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>UDrive</title>
-    <meta name="UDrive" content="A better carsgaring solution!">
+    <meta name="UDrive" content="A better carsharing solution!">
     <link rel="stylesheet" href="home-style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Text+Me+One&family=Roboto&display=swap" rel="stylesheet">
@@ -11,19 +11,19 @@
   <body>
     <div class="container">
       <div class="box">
-        <div class="welcome-text Roboto">
+        <div class="welcome-text is-Roboto">
           <p>USE YOUR PHONE TO REGISTER</p>
           <p>PRESS GO IF YOU ARE REGISTERED</p>
         </div>
-        <div class="phone-box-flex Roboto">
-          <div class="phone-suffix Roboto">
+        <div class="phone-box-flex is-Roboto">
+          <div class="phone-suffix is-Roboto">
             <p>+41</p>
           </div>
-          <div class="XX XXX XX XX Roboto">
+          <div class="XX XXX XX XX is-Roboto">
             <p>XX XXX XX XX</p>
           </div>
-          <div class="go-btn Roboto">
-            <a href="car-choice.html" class="go-btn Roboto">
+          <div class="go-btn is-Roboto">
+            <a href="car-choice.html" class="go-btn is-Roboto">
               <p><strong>GO</strong></p>
             </a>
           </div>
@@ -31,8 +31,6 @@
         <div class="title">
             <p>UDrive</p>
         </div>
-
-
       </div>
     </div>
   </body>
