--- a/car-choice.html
+++ b/car-choice.html
@@ -6,5 +6,21 @@
     <meta name="UDrive" content="A better carsgaring solution!">
     <link rel="stylesheet" href="car-choice-style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Text+Me+One&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Text+Me+One&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
   </head>
+  <body>
+    <div class="container">
+      <a href="home.html" class="pin-link">
+        <div class="pin-link"></div>
+        </a>
+      <div class="flexbox">
+        <div class="search-bar margins-boxes">
+          <p>Type to search...</p>
+        </div>
+        <div class="car-choose margins-boxes">
+          <p>Choose a car near you</p>
+        </div>
+      </div>
+
+    </div>
+  </body>
