--- a/car-choice.html
+++ b/car-choice.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-      <a href="home.html" class="pin-link">
+      <a href="car-menu.html" class="pin-link">
         <div class="pin-link"></div>
         </a>
       <div class="flexbox">
