--- a/car-menu.html
+++ b/car-menu.html
@@ -5,15 +5,19 @@
 		<meta charset="utf-8">
 		<script src="https://kit.fontawesome.com/3ecd39b4dc.js" crossorigin="anonymous"></script>
 
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="menu-style.css">
 		<title>Flexbox</title>
+
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Text+Me+One&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
-	<div classe="container">
-				
-		<img src="picture/carte.jpg" id="carte" alt="carte">
+	<div class="container">
+
+		<!--  		<img src="picture/carte.jpg" id="carte" alt="carte">		 -->
+
 
 		<div class="green-box">
 			<div class="car">
@@ -25,7 +29,7 @@
 			<div class="car-info">
 				<div class="distance">
 					<strong>Distance</strong> 80m
-				</div>				
+				</div>
 				<div class="fuel">
 					<strong>Fuel</strong> 320km
 				</div>
@@ -33,13 +37,13 @@
 			<div class="choice">
 				<div class="blink">
 					<strong>Blink headlights</strong>
-				</div>				
+				</div>
 				<div class="start">
 					<strong>Start your ride</strong>
 				</div>
 			</div>
 		</div>
-		
+
 	</div>
 
 </body>
